using Spring Boot 6.0.4-SNAPSHOT