@@ -156,71 +156,7 @@
       <plugin>
         <groupId>io.fabric8</groupId>
         <artifactId>docker-maven-plugin</artifactId>
-        <configuration>
-          <images>
-            <image>
-              <name>${docker.image}</name>
-              <build>
-                <from>${docker.base-image}</from>
-                <tags>
-                  <tag>${project.version}</tag>
-                </tags>
-                <optimise>true</optimise>
-                <runCmds>
-                  <runCmd>apt update</runCmd>
-                  <runCmd>apt install fonts-liberation -y</runCmd>
-                  <runCmd>mkdir -p /opt/config</runCmd>
-                  <runCmd>useradd -d /opt ${docker.app.user}</runCmd>
-                  <runCmd>chown -R ${docker.app.user}. /opt</runCmd>
-                  <runCmd>mkdir -p /var/log/app</runCmd>
-                  <runCmd>chown ${docker.app.user}. /var/log/app</runCmd>
-                </runCmds>
-                <workdir>/opt</workdir>
-                <user>${docker.app.user}</user>
-                <assembly>
-                  <targetDir>/opt</targetDir>
-                  <descriptorRef>artifact</descriptorRef>
-                </assembly>
-                <env>
-                  <MANAGEMENT_SERVER_PORT>9090</MANAGEMENT_SERVER_PORT>
-                </env>
-                <healthCheck>
-                  <interval>5m</interval>
-                  <timeout>5s</timeout>
-                  <startPeriod>3m</startPeriod>
-                  <retries>3</retries>
-                  <cmd>curl -f http://localhost:9090/actuator/health || exit 1</cmd>
-                </healthCheck>
-                <volumes>
-                  <volume>/tmp</volume>
-                  <volume>/opt/config</volume>
-                </volumes>
-                <ports>
-                  <port>5005</port>
-                  <port>8080</port>
-                  <port>9090</port>
-                </ports>
-                <entryPoint>
-                  <arg>java</arg>
-                  <arg>-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5005</arg>
-                  <arg>--add-opens</arg>
-                  <arg>java.base/java.lang=ALL-UNNAMED</arg>
-                  <arg>-Djava.security.egd=file:/dev/urandom</arg>
-                  <arg>-jar</arg>
-                  <arg>/opt/${project.build.finalName}.${project.packaging}</arg>
-                </entryPoint>
-              </build>
-            </image>
-          </images>
-        </configuration>
         <executions>
-          <execution>
-            <id>build docker image</id>
-            <phase>install</phase>
-            <goals>
-              <goal>build</goal>
-            </goals>
-          </execution>
           <execution>
             <id>push docker image</id>
             <phase>deploy</phase>
@@ -250,6 +186,107 @@
           <version>${project.version}</version>
         </dependency>
       </dependencies>
+    </profile>
+
+    <profile>
+      <id>native</id>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-maven-plugin</artifactId>
+            <configuration>
+              <image>
+                <builder>paketobuildpacks/builder:tiny</builder>
+                <env>
+                  <BP_NATIVE_IMAGE>true</BP_NATIVE_IMAGE>
+                </env>
+              </image>
+            </configuration>
+            <executions>
+              <execution>
+                <id>process-aot</id>
+                <goals>
+                  <goal>process-aot</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+          <plugin>
+            <groupId>org.graalvm.buildtools</groupId>
+            <artifactId>native-maven-plugin</artifactId>
+            <configuration>
+              <imageName>${docker.image}</imageName>
+              <classesDirectory>${project.build.outputDirectory}</classesDirectory>
+              <metadataRepository>
+                <enabled>true</enabled>
+              </metadataRepository>
+              <requiredVersion>22.3</requiredVersion>
+            </configuration>
+            <executions>
+              <execution>
+                <id>add-reachability-metadata</id>
+                <goals>
+                  <goal>add-reachability-metadata</goal>
+                </goals>
+              </execution>
+              <execution>
+                <id>build-native</id>
+                <phase>package</phase>
+                <goals>
+                  <goal>compile-no-fork</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+
+    <profile>
+      <id>nativeTest</id>
+      <dependencies>
+        <dependency>
+          <groupId>org.junit.platform</groupId>
+          <artifactId>junit-platform-launcher</artifactId>
+          <scope>test</scope>
+        </dependency>
+      </dependencies>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-maven-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>process-test-aot</id>
+                <goals>
+                  <goal>process-test-aot</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+          <plugin>
+            <groupId>org.graalvm.buildtools</groupId>
+            <artifactId>native-maven-plugin</artifactId>
+            <configuration>
+              <classesDirectory>${project.build.outputDirectory}</classesDirectory>
+              <metadataRepository>
+                <enabled>true</enabled>
+              </metadataRepository>
+              <requiredVersion>22.3</requiredVersion>
+            </configuration>
+            <executions>
+              <execution>
+                <id>native-test</id>
+                <goals>
+                  <goal>test</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
     </profile>
   </profiles>
 </project>
